# project_template

./: .travis.yml  CMakeLists.txt  README.md
cmake/: HeaderOnlyLibConfig.cmake.in
header-only/: CMakeLists.txt
header-only/include/: headeronly.h
header-only/visualizer/: HeaderOnlyLib.natvis
scripts/: genreport.sh
test/: CMakeLists.txt
test/src/: main.cpp
